# reply-hackathon

./: .gitignore  .reply_dataset.sqlite  README.md  pyproject.toml  test_output.txt  test_run.py
datasets/test_fixtures/: transactions.csv
outputs/: .reply_dataset.sqlite  _row_limit_smoke.txt
src/: main.py
src/agents/: __init__.py  dataset_tool_client.py  fraud_schema.py  fraud_topology.py
src/challanges/: base_challange.py
src/challanges/level_1/: agents.py  runner.py
src/config/: config.py
src/data/: loader.py
src/mcp_server/: __init__.py  dataset_server.py
src/models/: comunication.py  location.py  transaction.py  user.py
src/tools/: __init__.py  dataset_store.py
src/tracing/: __init__.py  langfuse_helpers.py
tests/: test_mcp_tools.py
